Terminal Checkin
Allow checking in on the terminal
Allow creating presences without checkin/checkout semantics
Fix copy&paste errors with references to members
Add sync from device to backend to create/update locally stored presences
Store presence locally when scanning the membership card
Provide frontend with active presence record, including checkin/checkout times
Show welcome/goodbye message depending on active presence record
Add helper function for identifying unique violations
Add status helper to return a Conflict status code
