# ourspace-backend/proto/api.pb.validate.go
@@ -6046,6 +6046,139 @@ var _ interface {
 	ErrorName() string
 } = PresencePageTokenValidationError{}
 
+// Validate checks the field values on CreatePresenceRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *CreatePresenceRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreatePresenceRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreatePresenceRequestMultiError, or nil if none found.
+func (m *CreatePresenceRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreatePresenceRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for PresenceId
+
+	if all {
+		switch v := interface{}(m.GetPresence()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, CreatePresenceRequestValidationError{
+					field:  "Presence",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, CreatePresenceRequestValidationError{
+					field:  "Presence",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetPresence()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return CreatePresenceRequestValidationError{
+				field:  "Presence",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return CreatePresenceRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreatePresenceRequestMultiError is an error wrapping multiple validation
+// errors returned by CreatePresenceRequest.ValidateAll() if the designated
+// constraints aren't met.
+type CreatePresenceRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreatePresenceRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreatePresenceRequestMultiError) AllErrors() []error { return m }
+
+// CreatePresenceRequestValidationError is the validation error returned by
+// CreatePresenceRequest.Validate if the designated constraints aren't met.
+type CreatePresenceRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreatePresenceRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreatePresenceRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreatePresenceRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreatePresenceRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreatePresenceRequestValidationError) ErrorName() string {
+	return "CreatePresenceRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CreatePresenceRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreatePresenceRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreatePresenceRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreatePresenceRequestValidationError{}
+
 // Validate checks the field values on CheckinRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
